Fix question mark misaligned on workspace profile

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -9669,3 +9669,7 @@ footer-ng2 .footer-main {
         width: 100%;
     }
 }
+
+.workspace-profile i.glyphicon.glyphicon-question-sign {
+    margin-left: 4px;
+}
